Dernière fournée de corrections Sonar Mise en place de MegaLinter ; web-lint pour la partie code quality sur la CI, Trivy pour la partie CVE