@@ -9,7 +9,6 @@ import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Adaptateur d'infrastructure : implémente le port {@link ClockRepository} via JPA/Postgres.
@@ -37,7 +36,7 @@ public class PostgresClockRepository implements ClockRepository {
     public List<Clock> findByPlaythroughId(String playthroughId) {
         return jpaRepository.findByPlaythroughIdOrderByOrderAsc(Long.parseLong(playthroughId)).stream()
                 .map(this::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
